--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
     "wait-on": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
