--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "electron": "^10.1.5",
     "electron-builder": "^22.9.1",
     "electron-is-dev": "^1.2.0",
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
@@ -21,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
+    "thepiratebayapi": "^1.1.1",
     "wait-on": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
