--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+dist
 
 #keys
 keys.js
@@ -24,3 +25,5 @@ keys.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+electron-builder.yml
