--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "description": "A Torrent Streaming App that helps You Watch Movies, Series on torrent without downloading them.",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Streamtor/streamtor.git"
-  },
   "main": "public/electron.js",
   "author": "Jay Vishaal J",
   "homepage": "./",
@@ -22,8 +18,8 @@
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "custom-electron-titlebar": "^3.2.5",
-    "electron": "^10.1.5",
     "electron-is-dev": "^1.2.0",
+    "electron-log": "^4.3.0",
     "electron-updater": "^4.3.5",
     "express": "^4.17.1",
     "frameless-titlebar": "^2.1.4",
@@ -50,7 +46,33 @@
     "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\"",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "gh-publish": "electron-builder --win -p always"
+  },
+  "build": {
+    "appId": "com.jvj.streamtor",
+    "productName": "Streamtor",
+    "copyright": "Copyright © year Jay Vishaal J",
+    "directories": {
+      "buildResources": "public"
+    },
+    "win": {
+      "publish": [
+        "github"
+      ]
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "jayvishaalj",
+        "repo": "Streamtor",
+        "releaseType": "draft"
+      }
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Streamtor/streamtor.git"
   },
   "eslintConfig": {
     "extends": [
@@ -74,18 +96,8 @@
     "@iconify/icons-ei": "^1.0.5",
     "@iconify/icons-gg": "^1.0.0",
     "@iconify/react": "^1.1.3",
-    "electron-builder": "^22.9.1"
-  },
-  "build": {
-    "appId": "com.jvj.streamtor",
-    "productName": "Streamtor",
-    "copyright": "Copyright © year Jay Vishaal J",
-    "directories": {
-      "buildResources": "public"
-    },
-    "publish": [
-      "github"
-    ]
+    "electron-builder": "^22.9.1",
+    "electron": "^10.1.5"
   },
   "bugs": {
     "url": "https://github.com/Streamtor/streamtor/issues"
