--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "streamtor",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "description": "A Torrent Streaming App that helps You Watch Movies, Series on torrent without downloading them.",
   "private": true,
   "main": "public/electron.js",
@@ -20,12 +20,14 @@
     "custom-electron-titlebar": "^3.2.5",
     "electron-is-dev": "^1.2.0",
     "electron-log": "^4.3.0",
+    "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^4.3.5",
     "express": "^4.17.1",
     "frameless-titlebar": "^2.1.4",
     "fs": "0.0.1-security",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-jw-player": "^1.19.1",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -34,6 +36,8 @@
     "thepiratebayapi": "^1.1.1",
     "video-react": "^0.14.1",
     "wait-on": "^5.2.0",
+    "wcjs-player": "^6.0.1",
+    "wcjs-prebuilt": "^3.0.0",
     "web-vitals": "^0.2.4",
     "webtorrent": "^0.112.0"
   },
@@ -85,6 +89,9 @@
       }
     ]
   },
+  "config": {
+    "forge": "./forge.config.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Streamtor/streamtor.git"
@@ -108,11 +115,15 @@
     ]
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.54",
+    "@electron-forge/maker-deb": "^6.0.0-beta.54",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
+    "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "@iconify/icons-ei": "^1.0.5",
     "@iconify/icons-gg": "^1.0.0",
     "@iconify/react": "^1.1.3",
-    "electron-builder": "^22.9.1",
-    "electron": "^10.1.5"
+    "electron": "^10.2.0"
   },
   "bugs": {
     "url": "https://github.com/Streamtor/streamtor/issues"
